_sass/_main.scss
/* ... */
#menu {
  background: #fff;
  min-height: 60px;
  padding: 0 20px;
  position: relative;
  z-index: 2000;

  .container {
    height: inherit;
    line-height: 60px;
  }

  .logo {
    background: url(/assets/images/logo-title.png) no-repeat center center;
    background-size: contain;
    display: inline-block;
    height: 50px;
    width: 135px;
    vertical-align: middle;
  }

  .toggle {
    height: 30px;
    width: 26px;
    display: block;
    margin-top: 18px;
    float: right;
    cursor: pointer;

    b {
      height: 3px;
      width: inherit;
      display: block;
      background: #000;
      border-radius: 4px;

      &:nth-child(2) {
        margin: 7px 0;
      }
    }
  }

  nav {
    background: #fff;
    line-height: normal;
    display: none;
    margin: 0px -20px;
    padding: 20px;

    a {
      font-size: 16px;
      display: block;
      color: #5D6570;
      letter-spacing: 1px;
      padding: 10px 0;
      margin: 8px 0;
    }

    .start {
      display: none;
    }
  }

  @media (min-width: 768px) {
    min-height: 80px;

    nav {
      a {
        font-size: 18px;
      }

      .start {
        display: inline-block;
        color: #9DE6CF;
        border: 2px solid #9DE6CF;
        border-radius: 4px;
        padding: 8px 25px;

        &:hover {
          border-color: #8fd1bc;
          background: #8fd1bc;
          text-decoration: none;
        }
      }
    }

    .container {
      line-height: 80px;
    }

    .logo {
      height: 70px;
      width: 145px;
    }

    .toggle {
      margin-top: 29px;
      width: 35px;
    }
  }

  @media (min-width: 992px) {
    background: none;
    position: absolute;
    top: 10px;
    padding: 0;
    width: 100%;

    .start & {
      display: none;
    }

    nav {
      display: block !important;
      float: right;
      padding: 0;
      background: none;
      margin-top: 22px;
      margin-left: 0;
      margin-right: 0;

      a {
        display: inline-block;
        padding: 0;
        font-size: 16px;
        margin-left: 20px;
        border-bottom: 1px solid transparent;

        &:hover,
        &.active {
          border-bottom-color: #5D6570;
        }
      }

      .start {
        background: #9DE6CF;
        color: #fff;
        padding: 6px 15px;
        margin-top: 0;
        margin-bottom: 0;
      }
    }

    .clearfix {
      display: none;
    }

    .container {
      width: 940px;
      margin: 0 auto;
    }

    .toggle {
      display: none;
    }

    .page & {
      position: relative;
      top: 0;
      background: #fff;
      border-bottom: 1px solid #D8D8D8;

      nav .start {
        background: #fff;
        color: #9DE6CF;

        &:hover {
          background: #8fd1bc;
          color: #fff;
        }
      }
    }
  }
}

#hero {
  color: #4D5052;
  padding: 90px 20px 0;
  height: 330px;
  background: url(/assets/images/hero-sm.png) no-repeat center center;

  h1 {
    font-size: 22px;
  }

  h2 {
    font-size: 16px;
    font-weight: 300;
    font-family: 'Open Sans', sans-serif;
  }

  .button-group {
    margin-top: 30px;
  }

  a {
    font-size: 16px;
    border-radius: 3px;
    padding: 10px 29px;
    display: inline-block;

    &:first-child {
      background: #F28282;
      color: #fff;
      margin-bottom: 15px;
    }

    &:last-child {
      background: #FFE096;
      color: #656565;
    }
  }

  @media (min-width: 768px) {
    height: 420px;
    padding-top: 80px;
    background-image: url(/assets/images/hero-md.png);

    h1 {
      margin-bottom: 20px;
      font-size: 50px;
      line-height: 69px;
    }

    h2 {
      font-size: 22px;
      margin-top: 0;
    }

    .button-group {
      br {
        display: none;
      }

      a {
        display: inline-block;

        &:last-child {
          margin-left: 25px;
        }
      }
    }
  }

  @media (min-width: 992px) {
    padding-left: 0;
    padding-right: 0;
    background-image: url(/assets/images/hero-lg.png);
    height: 610px;

    h1 {
      max-width: 700px;
    }

    .container {
      margin: 0 auto;
      width: 940px;
      margin-top: 180px;

      h2 {
        display: none;
      }
    }

    .button-group a:first-child {
      background: #82DBDE;
    }
  }
}
/* ... */

